css/style.css
/* ... */
               .personal-skills-images ul:nth-child(2){
                    background-color: #B91646;
               }

                    #website-img{
                         width: 100%;
                         height: 85%;
                         margin-bottom: 20px;
                         background: url(../assets/images/website.jpg);
                         background-size: cover;
                    }

/******************************************
/* WORK EXPERIENCE
/*******************************************/

#work-experience{
     justify-content: space-between;
     align-items: center;
}

     .statistics{
          display: flex;
          justify-content: flex-start;
          align-items: center;
          flex-wrap: wrap;
          width: 50%;
          font-size: 16px;
     }
          .statistics ul{
               width: 50%;
          }

          .statistics ul:nth-child(2),
          .statistics ul:nth-child(5){
               padding-left: 50px;
          }

               .statistics h3{
                    font-size: 6em;
                    margin-bottom: 5px;
                    color: #105652;
               }

               .statistics span{
                    font-size: 1.2em;
                    font-family: 'Poppins', serif;
               }

          .divider{
               background-color: black;
               width: 100%;
               height: 2px;
               margin: 25px 0;
          }
     
     .testimonials{
          width: 45%;
          border-radius: 5px;
          border: 3px solid black;
          background-color: #DFD8CA;
          padding: 25px 0;
          font-size: 16px;
     }

          .testimonials ul{
               flex-direction: column;
               justify-content: center;
               align-items: center;
               height: 100%;
               padding: 15px;
          }

               .testimonials li{
                    text-align: center;
               }

                    .testimonials img{
                         border-radius: 50%;
                         width: 50%;
                         margin-bottom: 25px;
                    }

                    .testimonials span{
                         font-size: 2em;
                    }

                    .testimonials p{
                         font-family: 'Poppins', serif;
                         line-height: 1.3em;
                    }

/******************************************
/* PORTFOLIO
/*******************************************/

#portfolio{
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 16px;
}

     .portfolio-section-one{
          text-align: center;
          width: 70%;
     }

          #portfolio h2.brittany{
               position: relative;
               font-size: 4em;
               color: #B91646;
               line-height: 0.2em;
          }

          #portfolio h2.bebas{
               font-size: 6em;
          }

          #portfolio p{
               font-family: 'Poppins';
               font-size: 1.1em;
               line-height: 1.5em;
          }

     .portfolio-section-two{
          display: flex;
          justify-content: center;
          align-items: center;
          flex-wrap: wrap;
          width: 100%;
     }

          .portfolio-section-two a{
               border-radius: 5px;
               border: 3px solid black;
               padding: 10px 0;
               margin: 10px 20px;
               width: 28%;
               text-align: center;
               color: white;
               font-size: 1.5em;
               letter-spacing: 0.2em;
               transition: 0.3s;
               -webkit-box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.75);
                  -moz-box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.75);
                       box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.75);
          }

          .portfolio-section-two a:hover{
               transition: 0.3s;
               -webkit-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.75);
                  -moz-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.75);
                       box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.75);
          }

          #portfolio section a:nth-child(1){
               background-color: #B91646;
          }

          #portfolio section a:nth-child(2){
               background-color: #105652;
          }

          #portfolio section a:nth-child(3){
               background-color: #F9C041;
               color: black;
          }

          /* #portfolio section a:nth-child(4){
               background-color: #DFD8CA;
               color: black;
          } */

/******************************************
/* PROJECT 01
/*******************************************/

#project-01{
     justify-content: flex-start;
     align-items: center;
     font-size: 16px;
}

     .project-01-section-one{
          width: 40%;
     }

          .project-01-section-one h2{
               font-size: 6em;
               margin-bottom: 15px;
          }

          .project-01-section-one p{
               font-size: 1.1em;
               line-height: 1.5em;
          }

     .project-01-section-two{
          display: flex;
          flex-direction: column;
          justify-content: space-between;
          align-items: center;
          width: 45%;
          height: 150%;
          margin-left: 50px;
     }

          .project-01-section-two a:nth-child(1){
               width: 100%;
               height: 65%;
               padding: 15px;
               margin: 100px 0 25px 0;
               background-color: #B91646;
               border-radius: 5px;
               border: 3px solid black;
               transition: 0.3s;
               -webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.75);
               -moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.75);
                    box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.75);
          }
/* ... */

